--- a/2025-04/04.27/04.27.md
+++ b/2025-04/04.27/04.27.md
@@ -19,3 +19,25 @@
   - fake난쟁이를 뺀 real난쟁이의 배열을 만들어 오름차순으로 정렬하여 출력한다.
 
 - (다른 풀이를 참고했다면 어떤걸 배웠는지)
+
+# 📝 알고리즘 문제 풀이 - 2025-04-27
+
+## 문제 📖
+
+- **문제 링크:** [백준 - 사탕 게임](https://www.acmicpc.net/problem/3085)
+
+- **문제 유형:** 브루트포스
+
+- **난이도:** Silver2
+
+- **풀이 시간:** ⏳ 60분
+
+## ✍ 접근 방식
+
+- (어떤 방법으로 접근했는지 설명)
+
+  - candy를 바꿀 수 있는지 여부를 체크해서 가능한 바꿀 수 있는 경우를 다보기
+  - 바꾼 후에 먹을 수 있는 캔디의 수를 세기기
+  - 바꾸면서 먹을 수 있는 캔디의 수가 max(=N)가 되면 break걸어주기
+
+- (다른 풀이를 참고했다면 어떤걸 배웠는지)
