--- a/2025-05/05.09/05.09.md
+++ b/2025-05/05.09/05.09.md
@@ -2,7 +2,7 @@
 
 ## 문제 📖
 
-- **문제 링크:** [BOJ - AC](https://www.acmicpc.net/problem/14888)
+- **문제 링크:** [BOJ - 연산자 끼워넣기](https://www.acmicpc.net/problem/14888)
 
 - **문제 유형:** : 브루트포스, 백트래킹
 
